# Hazwell

./: .gitignore  README.md
290 Arduino/: platformio.ini
7SegmentDisplay/: SevenSegment.qpf  top.qsf  top.qws  top.vhd  top_assignment_defaults.qdf
BrakeLightPCB/: BrakeLightPCB.PrjPcb  PCB.PcbDoc  TOP.SchDoc
CPU/: .hdl_checker.config  ALU.v  CPU.mpf  CPU.v  CPU_TB.v  PROCESSOR.v  REG32.v  RegFile.v  registers.v  test_tb.v  transcript
DE2 LCD Project/: DE2 LCD Project.mpf  DE2_LCD_Project.qsf  clock.vhd  top.vhd
DE2Labs/: DE2Labs.mpf  lab3.vhd  lab5TB.vhd  vsim.wlf
DE2_Testing/: ReadMe.md
DE2_VGA/: Timing.vhd  top.vhd
DE2_VGA_V/: DE2_VGA.qpf  DE2_VGA.qsf  DE2_VGA.v  ps2_keyboard.v  sevensegments.v  vga_640x480.v
DE2_Verilog/: DE2_Verilog.qpf  DE2_Verilog.qsf  DE2_Verilog.v  LCD.v  LCD_Controller.v  LCD_Test.v  SEG7.v
DE2_testing/: DE2_testing.qpf  DE2_testing.qsf  DE2_testing.qws
DE2_testing - LCD/: DE2_testing.qarlog  DE2_testing.qsf  DE2_testing.qws  DE2_testing.vhd  dc.vhd  lcd_controller.vhd  lcd_driver_core.vhd  top.vhd
DE2_testing - PS2/: DE2_testing.qsf  copyTop.vhd  sevensegments.vhd
DE2_testing - VGA/: DE2_testing.qsf  DE2_testing.qws  top.vhd  transcript
DE2_testing - VGA - Copy/: DE2 VGA.mpf  DE2_testing.qsf  DE2_testing.qws  top_tb.vhd  transcript
FPGA_PWM/: FPGA PWM.mpf  pwm.vhd
RISCV/: ALU.v  ALUControl.v  Control.v  Memory.v  REG32.v  RISCV.mpf  RV32I.v  RegFile.v  transcript
RISCV_V1/: ALU.v  Decode.v  RV32I.v
ReactionTime/: .gitignore  ReactionTime.mpf  clock.vhd  clockTB.vhd  readme.md  top.vhd  topTB.vhd  topTB2.vhd  vsim.wlf  wlft71c41g  wlfta8c5z2
ReactionTime_cyclone5TB/: .gitignore  ReactionTime.mpf  debounce.vhd  top.vhd  topTB.vhd  topTB2.vhd  wlfti78z8m
ST32 RTOS/: CMakeLists.txt
STM32 Cmake Template/: CMakeLists.txt  Makefile
STM32_RTOS/: CMakeCache.txt  CMakeLists.txt
STM32_RTOS/cmake/: arm-none-eabi.cmake
Templates/: README.md
Verilog/: VGA_Controller.v  Verilog.mpf  adder.v  clockedProcess.v  mux_using_assign.v  mux_using_assign_TB.v  sevensegmentcontroller.v  transcript  vga_640x480.v  vga_tb.v  wlft6qymxi  wlftbgfq4y  wlftd3chx2  wlfth1mggi  wlfthsc11c  wlfti26bhi  wlftim700g  wlftq5wyqd
_hdl_checker/: cache.json
introtutorial/: light.qpf  light.qsf  light.qws  light.vhd  test.vhd
processor/: ALU.v  CPU.mpf  CPU_TB.v  PROCESSOR.v  control.v  proc.v  readme.md  (+2 more)
(+1811 files in other folders)
